[gd_scene load_steps=4 format=3 uid="uid://ccf7v6egcpe81"]

[ext_resource type="Script" uid="uid://c2lmiryyfy3op" path="res://Out of Game/Main Menu/main_menu.gd" id="1_ph4pk"]
[ext_resource type="Texture2D" uid="uid://dqb7kjl37c1hb" path="res://Assets/Art/Ui Stuff/Menu.png" id="2_4on6o"]
[ext_resource type="PackedScene" uid="uid://dr8yn7q2kj5vp" path="res://Out of Game/Credits/credits.tscn" id="3_bcukg"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("new_game_button", "load_game_button", "settings_button", "quit_button", "credits_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ph4pk")
new_game_button = NodePath("Panel/MarginContainer/HBoxContainer/VBoxContainer/NewGameButton")
load_game_button = NodePath("Panel/MarginContainer/HBoxContainer/VBoxContainer/LoadGameButton")
settings_button = NodePath("Panel/MarginContainer/HBoxContainer/VBoxContainer/SettingsButton")
quit_button = NodePath("Panel/MarginContainer/HBoxContainer/VBoxContainer/QuitButton")
credits_menu = NodePath("Credits")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4on6o")
expand_mode = 1
stretch_mode = 6

[node name="Panel" type="Panel" parent="Panel/TextureRect"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 70.0
offset_right = 300.0
offset_bottom = 220.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Panel/TextureRect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "KAIJU ATTACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="Spacer" type="Control" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="NewGameButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play Game"

[node name="LoadGameButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Spacer2" type="Control" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits" parent="." instance=ExtResource("3_bcukg")]
visible = false
layout_mode = 1
offset_top = -265.0
offset_bottom = 160.0

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/NewGameButton" to="." method="new_game"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/SettingsButton" to="." method="settings_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/CreditsButton" to="." method="credits_opened"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="quit_game"]
[connection signal="closed_credits" from="Credits" to="." method="on_credits_closed"]
